--- a/ss.config
+++ b/ss.config
@@ -212,7 +212,7 @@ DOMAIN-SUFFIX,whatsapp.net,Proxy
 IP-CIDR,18.194.0.0/15,Proxy
 IP-CIDR,34.224.0.0/12,Proxy
 
-# 手工定义的 Direct 列表
+# 手工定义的 DIRECT 列表
 
 
 # adblock rules refresh time: 2017-11-26 15:02:10
@@ -645,7 +645,7 @@ DOMAIN-SUFFIX,ad.bjmama.net,REJECT
 DOMAIN-SUFFIX,ad.cooks.com,REJECT
 DOMAIN-SUFFIX,ad.crichd.in,REJECT
 DOMAIN-SUFFIX,ad.digitimes.com.tw,REJECT
-DOMAIN-SUFFIX,ad.directmirror.com,REJECT
+DOMAIN-SUFFIX,ad.DIRECTmirror.com,REJECT
 DOMAIN-SUFFIX,ad.download.cnet.com,REJECT
 DOMAIN-SUFFIX,ad.duga.jp,REJECT
 DOMAIN-SUFFIX,ad.eporner.com,REJECT
@@ -702,7 +702,7 @@ DOMAIN-SUFFIX,add.bugun.com.tr,REJECT
 DOMAIN-SUFFIX,add.dz19.net,REJECT
 DOMAIN-SUFFIX,add.freeimg8.com,REJECT
 DOMAIN-SUFFIX,add.mmyuer.com,REJECT
-DOMAIN-SUFFIX,addirector.vindicosuite.com,REJECT
+DOMAIN-SUFFIX,adDIRECTor.vindicosuite.com,REJECT
 DOMAIN-SUFFIX,adds.weatherology.com,REJECT
 DOMAIN-SUFFIX,addthis.com,REJECT
 DOMAIN-SUFFIX,adexprt.com,REJECT
@@ -2307,7 +2307,7 @@ DOMAIN-SUFFIX,pk840.com,REJECT
 DOMAIN-SUFFIX,playad.xjmg.com,REJECT
 DOMAIN-SUFFIX,player.1800coupon.com,REJECT
 DOMAIN-SUFFIX,player.1stcreditrepairs.com,REJECT
-DOMAIN-SUFFIX,player.800directories.com,REJECT
+DOMAIN-SUFFIX,player.800DIRECTories.com,REJECT
 DOMAIN-SUFFIX,player.accoona.com,REJECT
 DOMAIN-SUFFIX,player.alloutwedding.com,REJECT
 DOMAIN-SUFFIX,player.insuranceandhealth.com,REJECT
@@ -2786,7 +2786,7 @@ DOMAIN-SUFFIX,whistleout.s3.amazonaws.com,REJECT
 DOMAIN-SUFFIX,whpxy.com,REJECT
 DOMAIN-SUFFIX,whytoss.com,REJECT
 DOMAIN-SUFFIX,widget.crowdignite.com,REJECT
-DOMAIN-SUFFIX,widget.directory.dailycommercial.com,REJECT
+DOMAIN-SUFFIX,widget.DIRECTory.dailycommercial.com,REJECT
 DOMAIN-SUFFIX,widget.kelkoo.com,REJECT
 DOMAIN-SUFFIX,widget.raaze.com,REJECT
 DOMAIN-SUFFIX,widget.searchschoolsnetwork.com,REJECT
@@ -3161,7 +3161,7 @@ DOMAIN-SUFFIX,zone-telechargement.com,Proxy
 
 DOMAIN-KEYWORD,google,Proxy
 
-FINAL,direct
+FINAL,DIRECT
 
 [URL Rewrite]
 ^http://(www.)?google.cn https://www.google.com header
